- version of my-utils compatibleWithJava8