@@ -6,15 +6,17 @@ import org.hzt.test.model.Painter;
 import org.hzt.test.model.Painting;
 import org.junit.jupiter.api.Test;
 
+import java.util.AbstractMap;
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 import static hzt.stream.EntryStreamUtils.*;
-import static hzt.stream.collectors.CollectorsX.toUnmodifiableMap;
+import static hzt.stream.collectors.CollectorsX.toMap;
 import static hzt.stream.predicates.StringPredicates.startsWithAnyOf;
-import static java.util.function.Predicate.not;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -24,13 +26,13 @@ class EntryStreamUtilsTest {
 
     @Test
     void testMappingEntriesWithEntryFunction() {
-        final var groupedByCategoryMap = TestSampleGenerator.createBookList().stream()
+        final Map<String, List<Book>> groupedByCategoryMap = TestSampleGenerator.createBookList().stream()
                 .collect(Collectors.groupingBy(Book::getCategory));
 
-        final var groupedByBookNameListAsString = groupedByCategoryMap.entrySet().stream()
-                .map(value(Set::copyOf))
+        final List<String> groupedByBookNameListAsString = groupedByCategoryMap.entrySet().stream()
+                .map(value(HashSet::new))
                 .map(toSingle(EntryStreamUtilsTest::asString))
-                .collect(Collectors.toUnmodifiableList());
+                .collect(Collectors.toList());
 
         groupedByBookNameListAsString.forEach(System.out::println);
 
@@ -39,24 +41,24 @@ class EntryStreamUtilsTest {
 
     @Test
     void testMapEntryThenFilterByValueThenFilterByKeyThenCollectToMap() {
-        final var groupedByCategoryMap = TestSampleGenerator.createBookList().stream()
+        final Map<String, List<Book>> groupedByCategoryMap = TestSampleGenerator.createBookList().stream()
                 .collect(Collectors.groupingBy(Book::getCategory));
 
         System.out.println("groupedByCategoryMap:");
         groupedByCategoryMap.entrySet().forEach(System.out::println);
 
-        final var expectedMap = groupedByCategoryMap.entrySet().stream()
-                .map(e -> Map.entry(e.getKey(), Set.copyOf(e.getValue())))
+        final Map<String, Set<Book>> expectedMap = groupedByCategoryMap.entrySet().stream()
+                .map(e -> new AbstractMap.SimpleEntry<String, HashSet<Book>>(e.getKey(), new HashSet<>(e.getValue())) {})
                 .filter(e -> e.getKey() != null && (e.getKey().startsWith("E") || e.getKey().startsWith("F")))
                 .filter(e -> e.getValue() != null && !e.getValue().isEmpty())
-                .collect(Collectors.toUnmodifiableMap(Map.Entry::getKey, Map.Entry::getValue));
+                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
 
 
-        final var actualMap = groupedByCategoryMap.entrySet().stream()
-                .map(value(Set::copyOf))
+        final Map<String, HashSet<Book>> actualMap = groupedByCategoryMap.entrySet().stream()
+                .map(value(HashSet::new))
                 .filter(byKey(startsWithAnyOf("E", "F")))
-                .filter(byValue(not(Set::isEmpty)))
-                .collect(toUnmodifiableMap());
+                .filter(byValue(books -> !books.isEmpty()))
+                .collect(toMap());
 
         System.out.println("Result:");
         actualMap.entrySet().forEach(System.out::println);
@@ -72,30 +74,30 @@ class EntryStreamUtilsTest {
 
     @Test
     void testStreamingOverMapEntriesThenFilterByEntryThenMappingToEntryThenCollectingToMap() {
-        final var groupedByPainterMap = TestSampleGenerator.createPaintingList().stream()
+        final Map<Painter, List<Painting>> groupedByPainterMap = TestSampleGenerator.createPaintingList().stream()
                 .collect(Collectors.groupingBy(Painting::painter));
 
         groupedByPainterMap.entrySet().stream()
                 .map(value(List::size))
                 .forEach(System.out::println);
 
-        final var result = groupedByPainterMap.entrySet().stream()
+        final Map<String, Integer> result = groupedByPainterMap.entrySet().stream()
                 .filter(byEntry(EntryStreamUtilsTest::painterBornIn19thCenturyAndListGreaterThan1))
                 .map(toEntry(Painter::getLastname, List::size))
-                .collect(toUnmodifiableMap());
+                .collect(toMap());
 
         System.out.println("result = " + result);
-        assertTrue(result.keySet().containsAll(List.of("van Gogh", "Picasso")));
+        assertTrue(result.keySet().containsAll(Arrays.asList("van Gogh", "Picasso")));
     }
 
     private static boolean painterBornIn19thCenturyAndListGreaterThan1(Painter painter, List<Painting> paintingList) {
-        final var year = painter.getDateOfBirth().getYear();
+        final int year = painter.getDateOfBirth().getYear();
         return 1800 <= year && year < 1900 && paintingList.size() >= 2;
     }
 
     @Test
     void testStreamingOverMapEntriesThenFilterByKeyThenMappingToInvertedEntryThrowsDuplicatedKeyException() {
-        final var groupedByPainterMap = TestSampleGenerator.createPaintingList().stream()
+        final Map<Painter, List<Painting>> groupedByPainterMap = TestSampleGenerator.createPaintingList().stream()
                 .collect(Collectors.groupingBy(Painting::painter));
 
         groupedByPainterMap.entrySet().stream()
@@ -110,28 +112,28 @@ class EntryStreamUtilsTest {
         groupedByPainterMap.entrySet().stream()
                 .filter(byValue(list -> list.size() > 1))
                 .map(toInvertedEntry(Painter::getLastname, List::size))
-                .collect(toUnmodifiableMap())
+                .collect(toMap())
                 .entrySet().forEach(System.out::println);
     }
 
     @Test
     void testConsumingEntryStreamWithBiFunction() {
-        final var groupedByCategoryMap = TestSampleGenerator.createBookList().stream()
+        final Map<String, List<Book>> groupedByCategoryMap = TestSampleGenerator.createBookList().stream()
                 .collect(Collectors.groupingBy(Book::getCategory));
 
         System.out.println("groupedByCategoryMap:");
         groupedByCategoryMap.entrySet().forEach(System.out::println);
 
         groupedByCategoryMap.entrySet().stream()
-                .map(value(Set::copyOf))
+                .map(value(HashSet::new))
                 .filter(byKey(startsWithAnyOf("E", "F")))
-                .filter(byValue(not(Set::isEmpty)))
+                .filter(byValue(books -> !books.isEmpty()))
                 .forEach(entry(EntryStreamUtilsTest::assertResult)
                         .andThen(entry((bookCategory, bookSet) ->
                                 System.out.println("key: " +  bookCategory + ", value: " + bookSet))));
     }
 
-    private static void assertResult(String category, Set<Book> books) {
+    private static void assertResult(String category, HashSet<Book> books) {
         assertTrue(category.startsWith("E") || category.startsWith("F"));
         assertFalse(books.isEmpty());
     }
