@@ -9,6 +9,7 @@ import test.model.PaintingAuction;
 import java.time.LocalDate;
 import java.time.Month;
 import java.time.Year;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -25,12 +26,12 @@ public final class Generator {
         final List<Painting> vermeerPaintings = groupedByLastName.get("Vermeer");
         final List<Painting> picassoPaintings = groupedByLastName.get("Picasso");
 
-        final var painter = new Painter("Hans", "Zuidervaart", LocalDate.of(1989, 10, 18));
+        final Painter painter = new Painter("Hans", "Zuidervaart", LocalDate.of(1989, 10, 18));
         return MutableListX.of(
                 new PaintingAuction("Van Gogh Auction", LocalDate.of(1992, Month.APRIL, 2), vanGoghPaintings),
                 new PaintingAuction("Vermeer Auction", LocalDate.of(1940, Month.JANUARY, 23), vermeerPaintings),
                 new PaintingAuction("Picasso Auction", LocalDate.of(1965, Month.AUGUST, 4), picassoPaintings),
-                new PaintingAuction(null, null, List.of(new Painting("Test", painter, Year.of(2000), false))));
+                new PaintingAuction(null, null, Collections.singletonList(new Painting("Test", painter, Year.of(2000), false))));
     }
 
     private static Map<String, List<Painting>> paintingsByName() {
